--- a/Capstone2/app/src/main/res/layout/activity_profile_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_doctor.xml
@@ -5,7 +5,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F1ECFA"
-    tools:context=".Profile_doctor">
+    tools:context=".DoctorProfileActivity">
+
+    <TextView
+        android:id="@+id/txtDProfileName"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:hint="First - Last Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDProfileUpload" />
+
+    <EditText
+        android:id="@+id/txtDProfilePracID"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:ems="10"
+        android:hint="PractitianID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDProfileName" />
+
+    <EditText
+        android:id="@+id/txtDProfilePhone"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:ems="10"
+        android:hint="123-123-1234"
+        android:inputType="phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDProfileAddress" />
+
+    <TextView
+        android:id="@+id/txtDProfileAddress"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDProfilePracID" />
+
+    <EditText
+        android:id="@+id/txtDProfileEmail"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:ems="10"
+        android:hint="abc@email.com"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDProfilePhone" />
 
     <Button
         android:id="@+id/btnDProfileHome"
@@ -42,17 +101,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/txt_fullname"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="First - Last Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button34" />
-
     <EditText
         android:id="@+id/editText7"
         android:layout_width="137dp"
@@ -80,7 +128,7 @@
         android:background="#E6DBFA"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Practition ID:"
+        android:text="Address:"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#02105F"
         android:textSize="20sp"
@@ -104,18 +152,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button34" />
-
-    <TextView
-        android:id="@+id/txt_healthno"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="111-111-111"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_dob" />
+        app:layout_constraintTop_toBottomOf="@+id/btnDProfileUpload" />
 
     <EditText
         android:id="@+id/editText8"
@@ -144,7 +181,7 @@
         android:background="#E6DBFA"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Clinic Name: "
+        android:text="Practition ID:"
         android:textColor="#02105F"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -152,68 +189,29 @@
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
     <EditText
-        android:id="@+id/txt_phone"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
-        android:hint="123-123-1234"
-        android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_healthno" />
-
-    <EditText
-        android:id="@+id/txt_dob"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
-        android:hint="Name of the clinic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_fullname" />
-
-    <EditText
-        android:id="@+id/txt_createmail"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
-        android:hint="abc@email.com"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
-
-    <EditText
-        android:id="@+id/editText11"
+        android:id="@+id/txtDProfileTitle"
         android:layout_width="414dp"
         android:layout_height="57dp"
         android:background="#79048D"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="   My Profile, "
+        android:text="   My Profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button34"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <Button
-        android:id="@+id/button34"
+        android:id="@+id/btnDProfileUpload"
         android:layout_width="414dp"
         android:layout_height="165dp"
         android:background="#DD4E80"
         android:text="Upload Your Photo here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText11" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDProfileTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
