--- a/Capstone2/app/src/main/res/layout/activity_profile_school.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_school.xml
@@ -5,7 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E6F5F7"
-    tools:context=".Profile_school">
+    tools:context=".SchoolProfileActivity">
+
+    <EditText
+        android:id="@+id/txtSProfileTitle"
+        android:layout_width="414dp"
+        android:layout_height="57dp"
+        android:background="#03178B"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="   My Profile"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnSProfileUpload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <Button
         android:id="@+id/btnSProfileHome"
@@ -46,7 +63,7 @@
 
 
     <TextView
-        android:id="@+id/txt_fullname"
+        android:id="@+id/txtSProfileName"
         android:layout_width="212dp"
         android:layout_height="41dp"
         android:layout_marginTop="50dp"
@@ -54,7 +71,7 @@
         android:layout_marginRight="10dp"
         android:hint="First - Last Name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button34" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSProfileUpload" />
 
     <EditText
         android:id="@+id/editText7"
@@ -83,7 +100,7 @@
         android:background="#91C6F1"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Employee ID:"
+        android:text="Address:"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#02105F"
         android:textSize="20sp"
@@ -107,18 +124,17 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button34" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSProfileUpload" />
 
     <TextView
-        android:id="@+id/txt_healthno"
+        android:id="@+id/txtSProfileAddress"
         android:layout_width="212dp"
         android:layout_height="41dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:hint="111-111-111"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_dob" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfileSchoolName" />
 
     <EditText
         android:id="@+id/editText8"
@@ -155,7 +171,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
     <EditText
-        android:id="@+id/txt_phone"
+        android:id="@+id/txtSProfilePhone"
         android:layout_width="212dp"
         android:layout_height="41dp"
         android:layout_marginTop="15dp"
@@ -165,10 +181,10 @@
         android:hint="123-123-1234"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_healthno" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfileAddress" />
 
     <EditText
-        android:id="@+id/txt_dob"
+        android:id="@+id/txtSProfileSchoolName"
         android:layout_width="212dp"
         android:layout_height="41dp"
         android:layout_marginTop="15dp"
@@ -177,10 +193,10 @@
         android:ems="10"
         android:hint="Name of the school"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_fullname" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfileName" />
 
     <EditText
-        android:id="@+id/txt_createmail"
+        android:id="@+id/txtSProfileEmail"
         android:layout_width="212dp"
         android:layout_height="41dp"
         android:layout_marginTop="15dp"
@@ -190,33 +206,17 @@
         android:hint="abc@email.com"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
-
-    <EditText
-        android:id="@+id/editText11"
-        android:layout_width="414dp"
-        android:layout_height="57dp"
-        android:background="#03178B"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="   My Profile, "
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button34"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfilePhone" />
 
     <Button
-        android:id="@+id/button34"
+        android:id="@+id/btnSProfileUpload"
         android:layout_width="414dp"
         android:layout_height="165dp"
         android:background="#DD4E80"
         android:text="Upload Your Photo here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText11" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfileTitle"
+        tools:layout_editor_absoluteY="130dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
