--- a/Capstone2/app/src/main/res/layout/activity_vaccine__info.xml
+++ b/Capstone2/app/src/main/res/layout/activity_vaccine__info.xml
@@ -34,7 +34,7 @@
         android:textColor="@android:color/holo_red_dark"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_username"
+        app:layout_constraintBottom_toTopOf="@+id/txtLoginEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
