--- a/Capstone2/app/src/main/res/layout/activity_profile_personal.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_personal.xml
@@ -7,6 +7,32 @@
     android:background="#E8F8E8"
     tools:context=".PersonalProfileActivity">
 
+    <EditText
+        android:id="@+id/txtPProfileHC"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="15dp"
+        android:ems="10"
+        android:hint="Health Card #"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/txtPProfilePhone"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/txtPProfileName"
+        android:layout_width="212dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:ems="10"
+        android:hint="Full Name"
+        android:inputType="date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPProfileUpload" />
+
     <Button
         android:id="@+id/btnPProfileUpload"
         android:layout_width="414dp"
@@ -17,17 +43,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPProfileTitle"
         tools:layout_editor_absoluteY="130dp" />
-
-    <TextView
-        android:id="@+id/txtPProfileName"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:hint="First - Last Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPProfileUpload" />
 
     <EditText
         android:id="@+id/txtPProfileDOB"
@@ -41,17 +56,6 @@
         app:layout_constraintBottom_toTopOf="@+id/txtPProfileHC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPProfileName" />
-
-    <TextView
-        android:id="@+id/txtPProfileHC"
-        android:layout_width="212dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="15dp"
-        android:hint="111-111-111-1111-AA"
-        app:layout_constraintBottom_toTopOf="@+id/txtPProfilePhone"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/txtPProfilePhone"
