--- a/Capstone2/app/src/main/res/layout/activity_view_record.xml
+++ b/Capstone2/app/src/main/res/layout/activity_view_record.xml
@@ -7,7 +7,7 @@
     tools:context=".View_record">
 
     <Button
-        android:id="@+id/btnBackToRecordList"
+        android:id="@+id/btnViewRecordHome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
@@ -19,8 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button27" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText19"
@@ -40,19 +39,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <Button
-        android:id="@+id/button27"
-        android:layout_width="288dp"
-        android:layout_height="340dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="60dp"
-        android:text="View Record - schoo/person"
-        app:layout_constraintBottom_toTopOf="@+id/btnDSaveUpdate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -66,6 +52,16 @@
         app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText19" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/PMembersRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnViewRecordHome"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
