--- a/Capstone2/app/src/main/res/layout/activity_create_personal.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_personal.xml
@@ -185,7 +185,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:inputType="date|datetime"
+        android:hint="dd/mm/yyyy"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText4"
         app:layout_constraintTop_toBottomOf="@+id/txtPersonalName" />
