--- a/Capstone2/app/src/main/res/layout/activity_add_member_form.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_member_form.xml
@@ -104,7 +104,7 @@
         android:id="@+id/btnPAddADD"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:background="#76A83A"
         android:text="ADD"
         android:textSize="25sp"
@@ -140,7 +140,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:ems="10"
-        android:inputType="date|none"
+        android:hint="dd/mm/yyyy"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText22"
         app:layout_constraintTop_toBottomOf="@+id/txtPAddName" />
