--- a/Capstone2/app/src/main/res/layout/activity_add_patient_form.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_patient_form.xml
@@ -8,33 +8,6 @@
     tools:context=".AddPatientForm">
 
     <EditText
-        android:id="@+id/editText17"
-        android:layout_width="137dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
-        android:background="#E6DBFA"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Patient's ID:"
-        android:textSize="19sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText23" />
-
-    <EditText
-        android:id="@+id/txtAddPatientMemberID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:ems="10"
-        android:inputType="none|number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editText23"
-        app:layout_constraintTop_toBottomOf="@+id/txtAddPatientHC" />
-
-    <EditText
         android:id="@+id/txtAddPatientName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:ems="10"
-        android:inputType="date|none"
+        android:hint="dd/mm/yyyy"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText22"
         app:layout_constraintTop_toBottomOf="@+id/txtAddPatientName" />
@@ -163,14 +137,14 @@
         android:id="@+id/btnDAddADD"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="64dp"
         android:background="#EE99B7"
         android:text="ADD"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText17" />
+        app:layout_constraintTop_toBottomOf="@+id/txtAddPatientHC" />
 
     <Button
         android:id="@+id/button30"
