--- a/Capstone2/app/src/main/res/layout/activity_add_vaccine.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_vaccine.xml
@@ -16,7 +16,7 @@
         android:background="#C5E0C7"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Date of Birth :"
+        android:text="Date Given:"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:inputType="date|none"
+        android:hint="dd/mm/yyyy"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText24"
         app:layout_constraintTop_toBottomOf="@+id/txtVAddName" />
@@ -54,7 +55,7 @@
         android:background="#C5E0C7"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Full Name :"
+        android:text="Vaccine Name:"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
