--- a/Capstone2/app/src/main/res/layout/activity_profile_personal.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_personal.xml
@@ -33,16 +33,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnPProfileUpload" />
 
-    <Button
+    <ImageView
         android:id="@+id/btnPProfileUpload"
-        android:layout_width="414dp"
+        android:layout_width="260dp"
         android:layout_height="165dp"
-        android:background="#DD4E80"
-        android:text="Upload Your Photo here"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="#E99EB8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPProfileTitle"
-        tools:layout_editor_absoluteY="130dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPProfileTitle" />
 
     <EditText
         android:id="@+id/txtPProfileDOB"
@@ -221,5 +218,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
+
+    <Button
+        android:id="@+id/btn_uploadPerson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="69dp"
+        android:text="Upload Image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnPProfileUpload"
+        app:layout_constraintTop_toBottomOf="@+id/txtPProfileTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
