--- a/Capstone2/app/src/main/res/layout/activity_profile_school.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_school.xml
@@ -208,15 +208,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSProfilePhone" />
 
-    <Button
+    <ImageView
         android:id="@+id/btnSProfileUpload"
-        android:layout_width="414dp"
+        android:layout_width="260dp"
         android:layout_height="165dp"
-        android:background="#DD4E80"
-        android:text="Upload Your Photo here"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"
+        android:background="#E99EB8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSProfileTitle"
-        tools:layout_editor_absoluteY="130dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfileTitle" />
+
+    <Button
+        android:id="@+id/btn_uploadSchool"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="69dp"
+        android:text="Upload Image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toEndOf="@+id/btnSProfileUpload"
+        app:layout_constraintTop_toBottomOf="@+id/txtSProfileTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
